# libcrcrc

./: .gitignore  LICENSE.md  Makefile.am  README.md  bitbucket-pipelines.yml  configure.ac  crcrc.pc.in
.github/workflows/: build-if-tag-release.yaml
include/: libcrcrc.h
src/: crc16ccitt_false.c  crc16xmodem.c  libcrcrc.c
test/: test-libcrcrc.c
